--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@ footer{
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="supabase.js"></script>
 
 <script>
 async function loadAds(){
+  ...
+}
+loadAds();
+</script>
 
   const { data, error } = await supabaseClient.from("ads")
     .select('*')
