--- a/admin.html
+++ b/admin.html
@@ -161,55 +161,41 @@ hr { margin:30px 0; }
 
 <script>
 
-async function save(){
+// 로그인
+async function login(){
 
-  // 기존 광고 전부 삭제
-  await supabaseClient.from("ads").delete().neq("id",0);
+  const email = document.getElementById("loginId").value;
+  const password = document.getElementById("loginPw").value;
 
-  // 이미지 광고
-  const imageInputs=document.querySelectorAll("#imageAdmin input");
-  for(let i=0;i<imageInputs.length;i+=2){
+  const { data, error } = await supabaseClient.auth.signInWithPassword({
+    email: email,
+    password: password
+  });
 
-    const img=imageInputs[i].value.trim();
-    const link=imageInputs[i+1].value.trim();
-
-    if(img){
-      await supabaseClient.from("ads").insert([{
-        type:"image",
-        title:"",
-        image_url:img,
-        link_url:link
-      }]);
-    }
+  if(error){
+    alert("로그인 실패");
+    console.log(error);
+    return;
   }
 
-  // 텍스트 광고
-  const textInputs=document.querySelectorAll("#textAdmin input");
-  for(let i=0;i<textInputs.length;i+=2){
+  loginBox.style.display="none";
+  adminBox.style.display="block";
+  loadAdmin();
+}
 
-    const text=textInputs[i].value.trim();
-    const link=textInputs[i+1].value.trim();
-
-    if(text){
-      await supabaseClient.from("ads").insert([{
-        type:"text",
-        title:text,
-        image_url:"",
-        link_url:link
-      }]);
-    }
+// 로그인 유지 체크
+supabaseClient.auth.getSession().then(({ data })=>{
+  if(data.session){
+    loginBox.style.display="none";
+    adminBox.style.display="block";
+    loadAdmin();
   }
+});
 
-  // 사이트 설정 저장
-  await supabaseClient.from("site_settings").delete().neq("id",0);
-
-  await supabaseClient.from("site_settings").insert([{
-    banner_img: bannerImg.value.trim(),
-    banner_link: bannerLink.value.trim(),
-    owner_name: ownerName.value.trim()
-  }]);
-
-  alert("Supabase 저장 완료");
+// 로그아웃 버튼 추가 가능
+async function logout(){
+  await supabaseClient.auth.signOut();
+  location.reload();
 }
 
 </script>
