--- a/admin.html
+++ b/admin.html
@@ -163,23 +163,18 @@ hr { margin:30px 0; }
 
 // 🔐 로그인
 async function login(){
-
   const email = loginId.value;
   const password = loginPw.value;
 
-  const { data, error } =
-    await supabaseClient.auth.signInWithPassword({
-      email,
-      password
-    });
+  const { error } = await supabaseClient.auth.signInWithPassword({
+    email,
+    password
+  });
 
   if(error){
     alert("로그인 실패");
-    console.log(error);
     return;
   }
-
-  console.log("로그인 성공:", data);
 
   loginBox.style.display="none";
   adminBox.style.display="block";
@@ -188,9 +183,11 @@ async function login(){
 }
 
 // 🔁 로그인 유지
-supabaseClient.auth.onAuthStateChange((event, session) => {
-  if (session) {
-    console.log("세션 유지됨");
+supabaseClient.auth.getSession().then(({ data })=>{
+  if(data.session){
+    loginBox.style.display="none";
+    adminBox.style.display="block";
+    loadData();
   }
 });
 
@@ -244,17 +241,25 @@ async function loadData(){
 // 💾 저장
 async function save(){
 
-  const { data: { session } } =
-    await supabaseClient.auth.getSession();
+  // 광고 전체 삭제
+  await supabaseClient.from("ads").delete().neq("id",0);
 
-  if(!session){
-    alert("로그인이 필요합니다");
-    return;
+  // 이미지 광고 저장
+  const imgInputs=imageAdmin.querySelectorAll("input");
+  for(let i=0;i<imgInputs.length;i+=2){
+
+    const img=imgInputs[i].value.trim();
+    const link=imgInputs[i+1].value.trim();
+
+    if(img){
+      await supabaseClient.from("ads").insert([{
+        type:"image",
+        title:"",
+        image_url:img,
+        link_url:link
+      }]);
+    }
   }
-
-  console.log("현재 세션:", session);
-
-  // ↓ 기존 저장 코드 계속
 
   // 텍스트 광고 저장
   const txtInputs=textAdmin.querySelectorAll("input");
