--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
 <title>검색 플랫폼</title>
 <style>
 
+.owner-banner {
+  width:100%;
+  height:120px;                /* 배너와 동일 높이 */
+  margin:30px 0;
+  border-radius:14px;
+  background:#f0f0f0;          /* 라이트그레이 */
+  border:2px solid #ddd;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.owner-inner {
+  width:100%;
+  max-width:1200px;            /* 배너와 동일 컨테이너 */
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:0 20px;
+}
+
+.owner-left {
+  font-size:18px;
+  color:#333;
+}
+
+.owner-sns a {
+  font-size:22px;
+  margin-left:18px;
+  color:#555;
+  transition:0.2s;
+}
+
+.owner-sns a:hover {
+  color:#87CEEB;
+  transform:translateY(-3px);
+}
+
 /* ===== 고급 Footer ===== */
 
 .site-footer {
@@ -308,32 +346,29 @@ body {
 
   </div>
 
-<footer class="site-footer">
-  <div class="footer-inner">
-
-    <div class="footer-left">
-      <div class="footer-logo">EKinfo</div>
-      <div class="footer-desc">
-        광고 및 링크제공 플랫폼
-      </div>
+<div class="owner-banner">
+  <div class="owner-inner">
+    <div class="owner-left">
+      <strong id="ownerDisplay"></strong>
     </div>
 
-    <div class="footer-right">
-      <div class="footer-owner">
-        © <span id="year"></span> 
-        <span id="ownerDisplay"></span>
-      </div>
-
-      <div class="footer-sns">
-        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://x.com/" target="_blank"><i class="fab fa-x-twitter"></i></a>
-      </div>
+    <div class="owner-sns">
+      <a href="https://www.instagram.com/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.youtube.com/" target="_blank">
+        <i class="fab fa-youtube"></i>
+      </a>
+      <a href="https://www.facebook.com/" target="_blank">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://x.com/" target="_blank">
+        <i class="fab fa-x-twitter"></i>
+      </a>
     </div>
-
   </div>
-</footer>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="supabase.js"></script>
 
