--- a/admin.html
+++ b/admin.html
@@ -278,7 +278,7 @@ if (settings && settings.length > 0) {
   snsYoutube.value = s.youtube || "";
   snsFacebook.value = s.facebook || "";
   snsTwitter.value = s.twitter || "";
-}
+}   // ← loadData 닫는 괄호 추가
 
 async function save() {
 
