--- a/index.html
+++ b/index.html
@@ -419,35 +419,38 @@ async function loadSite(){
 
   });
 
-  // 사이트 설정 불러오기
-  const { data: settings } = await supabaseClient
-    .from("site_settings")
-    .select("*")
-    .limit(1);
+// 사이트 설정 불러오기
+const { data: settings } = await supabaseClient
+  .from("site_settings")
+  .select("*")
+  .limit(1);
 
-if(settings.length > 0){
+const bannerBox = document.getElementById("topBanner");
+bannerBox.innerHTML = "";
+
+if (settings && settings.length > 0) {
 
   const s = settings[0];
 
+  // 소유자
   document.getElementById("ownerDisplay").innerText =
     s.owner_name || "관리자";
 
+  // SNS
   document.getElementById("instaLink").href = s.instagram || "#";
   document.getElementById("ytLink").href = s.youtube || "#";
   document.getElementById("fbLink").href = s.facebook || "#";
   document.getElementById("twLink").href = s.twitter || "#";
+
+  // 배너
+  if (s.banner_img) {
+    bannerBox.innerHTML = `
+      <a href="${s.banner_link}" target="_blank">
+        <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
+      </a>`;
+  }
+
 }
-
-    // 배너
-    const bannerBox=document.getElementById("topBanner");
-    bannerBox.innerHTML="";
-
-    if(s.banner_img){
-      bannerBox.innerHTML=`
-        <a href="${s.banner_link}" target="_blank">
-          <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
-        </a>`;
-    }
 
     // 소유자
     document.getElementById("ownerDisplay").innerText=
@@ -455,7 +458,6 @@ if(settings.length > 0){
   }
 
   // 연도
-  document.getElementById("year").innerText=
     new Date().getFullYear();
 
 }
