--- a/index.html
+++ b/index.html
@@ -384,82 +384,70 @@ body {
 
 async function loadSite(){
 
+  const imgBox = document.getElementById("imageAds");
+  const txtBox = document.getElementById("textAds");
+  const bannerBox = document.getElementById("topBanner");
+
+  imgBox.innerHTML="";
+  txtBox.innerHTML="";
+  bannerBox.innerHTML="";
+
   // 광고 불러오기
   const { data: ads } = await supabaseClient
     .from("ads")
     .select("*")
     .order("id", { ascending:true });
 
-  const imgBox = document.getElementById("imageAds");
-  const txtBox = document.getElementById("textAds");
+  if (ads) {
+    ads.forEach(ad=>{
 
-  imgBox.innerHTML="";
-  txtBox.innerHTML="";
+      if(ad.type==="image"){
+        const wrap=document.createElement("div");
+        wrap.className="img-ad";
+        wrap.innerHTML=`
+          <a href="${ad.link_url}" target="_blank">
+            <img src="${ad.image_url}" style="width:100%;height:100%;object-fit:cover;">
+          </a>`;
+        imgBox.appendChild(wrap);
+      }
 
-  ads.forEach(ad=>{
+      if(ad.type==="text"){
+        const a=document.createElement("a");
+        a.className="text-ad";
+        a.href=ad.link_url;
+        a.target="_blank";
+        a.innerText=ad.title;
+        txtBox.appendChild(a);
+      }
 
-    if(ad.type==="image"){
-      const wrap=document.createElement("div");
-      wrap.className="img-ad";
-      wrap.innerHTML=`
-        <a href="${ad.link_url}" target="_blank">
-          <img src="${ad.image_url}" style="width:100%;height:100%;object-fit:cover;">
-        </a>`;
-      imgBox.appendChild(wrap);
-    }
-
-    if(ad.type==="text"){
-      const a=document.createElement("a");
-      a.className="text-ad";
-      a.href=ad.link_url;
-      a.target="_blank";
-      a.innerText=ad.title;
-      txtBox.appendChild(a);
-    }
-
-  });
-
-// 사이트 설정 불러오기
-const { data: settings } = await supabaseClient
-  .from("site_settings")
-  .select("*")
-  .limit(1);
-
-const bannerBox = document.getElementById("topBanner");
-bannerBox.innerHTML = "";
-
-if (settings && settings.length > 0) {
-
-  const s = settings[0];
-
-  // 소유자
-  document.getElementById("ownerDisplay").innerText =
-    s.owner_name || "관리자";
-
-  // SNS
-  document.getElementById("instaLink").href = s.instagram || "#";
-  document.getElementById("ytLink").href = s.youtube || "#";
-  document.getElementById("fbLink").href = s.facebook || "#";
-  document.getElementById("twLink").href = s.twitter || "#";
-
-  // 배너
-  if (s.banner_img) {
-    bannerBox.innerHTML = `
-      <a href="${s.banner_link}" target="_blank">
-        <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
-      </a>`;
+    });
   }
 
-}
+  // 사이트 설정 불러오기
+  const { data: settings } = await supabaseClient
+    .from("site_settings")
+    .select("*")
+    .limit(1);
 
-    // 소유자
-    document.getElementById("ownerDisplay").innerText=
+  if (settings && settings.length > 0) {
+
+    const s = settings[0];
+
+    document.getElementById("ownerDisplay").innerText =
       s.owner_name || "관리자";
+
+    document.getElementById("instaLink").href = s.instagram || "#";
+    document.getElementById("ytLink").href = s.youtube || "#";
+    document.getElementById("fbLink").href = s.facebook || "#";
+    document.getElementById("twLink").href = s.twitter || "#";
+
+    if (s.banner_img) {
+      bannerBox.innerHTML=`
+        <a href="${s.banner_link}" target="_blank">
+          <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
+        </a>`;
+    }
   }
-
-  // 연도
-    new Date().getFullYear();
-
 }
 
 loadSite();
