--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
   box-shadow:0 6px 18px rgba(0,0,0,0.15);
 }
 
+.owner-sns a,
+.owner-sns a:hover,
+.footer-sns a,
+.footer-sns a:hover {
+  text-decoration: none !important;
+}
+
 /* ===== 고급 Footer ===== */
 
 .site-footer {
