--- a/index.html
+++ b/index.html
@@ -449,13 +449,27 @@ async function loadSite(){
     document.getElementById("fbLink").href = s.facebook || "#";
     document.getElementById("twLink").href = s.twitter || "#";
 
-    if (s.banner_img) {
-      bannerBox.innerHTML=`
-        <a href="${s.banner_link}" target="_blank">
-          <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
-        </a>`;
-    }
+if (s.banner_img) {
+
+  if (s.banner_link && s.banner_link.trim() !== "") {
+    bannerBox.innerHTML = `
+      <a href="${s.banner_link}" target="_blank" class="banner-link">
+        <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
+      </a>`;
+  } else {
+    bannerBox.innerHTML = `
+      <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">`;
   }
+
+}
+
+.banner-link img {
+  transition: transform 0.4s ease, filter 0.4s ease;
+}
+
+.banner-link:hover img {
+  transform: scale(1.05);
+  filter: brightness(1.05);
 }
 
 loadSite();
