--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
 <title>검색 플랫폼</title>
 <style>
 
-.banner-link img {
+/* ===== 배너 Hover 효과 ===== */
+
+.top-banner {
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.top-banner img {
   transition: transform 0.4s ease, filter 0.4s ease;
 }
 
-.banner-link:hover img {
-  transform: scale(1.05);
-  filter: brightness(1.05);
+/* 마우스 올렸을 때 */
+.top-banner:hover img {
+  transform: scale(1.05);   /* 살짝 확대 */
+  filter: brightness(1.05); /* 살짝 밝게 */
+}
+
+/* 부드러운 그림자 */
+.top-banner:hover {
+  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
 }
 
 .owner-sns a,
@@ -458,18 +472,13 @@ async function loadSite(){
     document.getElementById("fbLink").href = s.facebook || "#";
     document.getElementById("twLink").href = s.twitter || "#";
 
-if (s.banner_img) {
-
-  if (s.banner_link && s.banner_link.trim() !== "") {
-    bannerBox.innerHTML = `
-      <a href="${s.banner_link}" target="_blank" class="banner-link">
-        <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
-      </a>`;
-  } else {
-    bannerBox.innerHTML = `
-      <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">`;
+    if (s.banner_img) {
+      bannerBox.innerHTML=`
+        <a href="${s.banner_link}" target="_blank">
+          <img src="${s.banner_img}" style="width:100%;height:100%;object-fit:cover;">
+        </a>`;
+    }
   }
-
 }
 
 loadSite();
