--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 <link rel="icon" href="data:,">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <meta charset="UTF-8">
@@ -62,8 +63,18 @@
 }
 
 .owner-left {
-  font-size:18px;
-  color:#333;
+  font-family: 'Playfair Display', 'Pretendard', serif;
+  font-size: 22px;
+  letter-spacing: 1px;
+  color: #222;
+  font-weight: 600;
+}
+
+/* 살짝 강조 효과 */
+.owner-left strong {
+  background: linear-gradient(90deg, #222, #555);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* 🔥 동그란 SNS 버튼 */
