--- a/index.html
+++ b/index.html
@@ -443,10 +443,12 @@ async function loadSite(){
   const imgBox = document.getElementById("imageAds");
   const txtBox = document.getElementById("textAds");
   const bannerBox = document.getElementById("topBanner");
+  const bottomBox = document.getElementById("bottomImageAds");
 
   imgBox.innerHTML="";
   txtBox.innerHTML="";
   bannerBox.innerHTML="";
+  bottomBox.innerHTML="";
 
   // 광고 불러오기
   const { data: ads } = await supabaseClient
@@ -457,27 +459,39 @@ async function loadSite(){
   if (ads) {
     ads.forEach(ad=>{
 
-if(ad.type==="image"){
-  const wrap=document.createElement("div");
-  wrap.className="img-ad";
-  wrap.innerHTML=`
-    <a href="${ad.link_url}" target="_blank">
-      <img src="${ad.image_url}" style="width:100%;height:100%;object-fit:cover;">
-    </a>`;
-  imgBox.appendChild(wrap);
-}
+      if(ad.type==="image"){
+        const wrap=document.createElement("div");
+        wrap.className="img-ad";
+        wrap.innerHTML=`
+          <a href="${ad.link_url}" target="_blank">
+            <img src="${ad.image_url}" style="width:100%;height:100%;object-fit:cover;">
+          </a>`;
+        imgBox.appendChild(wrap);
+      }
 
-if(ad.type==="square"){
-  const wrap=document.createElement("div");
-  wrap.className="square-ad";
-  wrap.innerHTML=`
-    <a href="${ad.link_url}" target="_blank">
-      <img src="${ad.image_url}">
-    </a>`;
-  document.getElementById("bottomImageAds").appendChild(wrap);
-}
+      if(ad.type==="text"){
+        const a=document.createElement("a");
+        a.className="text-ad";
+        a.href=ad.link_url;
+        a.target="_blank";
+        a.innerText=ad.title;
+        txtBox.appendChild(a);
+      }
 
-  // 사이트 설정 불러오기
+      if(ad.type==="square"){
+        const wrap=document.createElement("div");
+        wrap.className="square-ad";
+        wrap.innerHTML=`
+          <a href="${ad.link_url}" target="_blank">
+            <img src="${ad.image_url}">
+          </a>`;
+        bottomBox.appendChild(wrap);
+      }
+
+    });
+  }
+
+  // 사이트 설정
   const { data: settings } = await supabaseClient
     .from("site_settings")
     .select("*")
