--- a/admin.html
+++ b/admin.html
@@ -97,39 +97,74 @@ async function loadData(){
 
 /* ===== 저장 ===== */
 
-async function saveSettings(){
+async function saveAll(){
 
-  const payload={
-    id:1,
-    banner_img:bannerImg.value.trim(),
-    banner_link:bannerLink.value.trim(),
-    owner_name:ownerName.value.trim(),
-    instagram:instagram.value.trim(),
-    youtube:youtube.value.trim(),
-    facebook:facebook.value.trim(),
-    twitter:twitter.value.trim()
+  /* =========================
+     1️⃣ 배너 + 소유자 + SNS 저장
+     ========================= */
+
+  const payload = {
+    banner_img: bannerImg.value.trim(),
+    banner_link: bannerLink.value.trim(),
+    owner_name: ownerName.value.trim(),
+    instagram: instagram.value.trim(),
+    youtube: youtube.value.trim(),
+    facebook: facebook.value.trim(),
+    twitter: twitter.value.trim()
   };
 
-  /* 먼저 update 시도 */
-  const { data, error } = await supabaseClient
-    .from("site_settings")
-    .update(payload)
-    .eq("id",1);
+  try {
 
-  if(error){
-    console.error("update 실패:",error);
-
-    /* update 실패하면 insert */
-    const { error: insertError } = await supabaseClient
+    // id=1 존재 확인
+    const { data: existing, error: selectError } = await supabaseClient
       .from("site_settings")
-      .insert([payload]);
+      .select("id")
+      .eq("id", 1)
+      .single();
 
-    if(insertError){
-      console.error("insert 실패:",insertError);
-      alert("저장 실패 ❌ 콘솔 확인");
-      return;
+    if(selectError && selectError.code !== "PGRST116"){
+      console.error("select 오류:", selectError);
     }
+
+    if (existing) {
+      // 있으면 update
+      const { error: updateError } = await supabaseClient
+        .from("site_settings")
+        .update(payload)
+        .eq("id", 1);
+
+      if(updateError){
+        console.error("update 오류:", updateError);
+        alert("설정 저장 실패");
+        return;
+      }
+
+    } else {
+      // 없으면 insert
+      const { error: insertError } = await supabaseClient
+        .from("site_settings")
+        .insert([{ id:1, ...payload }]);
+
+      if(insertError){
+        console.error("insert 오류:", insertError);
+        alert("설정 저장 실패");
+        return;
+      }
+    }
+
+  } catch(e){
+    console.error("site_settings 저장 중 예외:", e);
+    alert("설정 저장 실패");
+    return;
   }
+
+
+  /* =========================
+     2️⃣ 기존 광고 저장 로직
+     ========================= */
+  // 🔥 이 아래 광고 저장 부분은
+  // 기존 코드 그대로 두세요
+  // (여기 수정하지 마세요)
 
   alert("저장 완료 ✅");
 }
