--- a/index.html
+++ b/index.html
@@ -256,6 +256,33 @@ document.getElementById("twLink").href = s.twitter || "#";
 }
 
 loadSite();
+
+function search(){
+
+  const keyword = document.getElementById("searchInput").value.toLowerCase();
+
+  const textAds = document.querySelectorAll(".text-ad");
+
+  textAds.forEach(ad=>{
+    const text = ad.innerText.toLowerCase();
+
+    if(text.includes(keyword)){
+      ad.style.display = "block";
+      ad.style.border = "2px solid #87CEEB";
+    }else{
+      ad.style.display = "none";
+    }
+  });
+
+}
+
+document.getElementById("searchInput")
+.addEventListener("keydown", function(e){
+  if(e.key === "Enter"){
+    search();
+  }
+});
+
 </script>
 
 </body>
