--- a/index.html
+++ b/index.html
@@ -123,13 +123,19 @@ body{
 .owner-section{
   margin-top:50px;
   padding:25px;
-  background:#111;
+  background:linear-gradient(
+    135deg,
+    #f2f2f2 0%,
+    #e6e6e6 50%,
+    #dcdcdc 100%
+  );
   border-radius:14px;
-  color:#fff;
+  color:#333;
   display:flex;
   justify-content:space-between;
   align-items:center;
   flex-wrap:wrap;
+  box-shadow:0 8px 20px rgba(0,0,0,0.08);
 }
 
 .owner-name{
